plugins {
    id 'java'
}

sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}


group 'com.zeydie'
version '7.9-0.3.7R'

repositories {
    mavenCentral()

    flatDir {
        dirs 'libs'
    }
}

dependencies {
    // https://mvnrepository.com/artifact/com.github.pengrad/java-telegram-bot-api
    implementation group: 'com.github.pengrad', name: 'java-telegram-bot-api', version: '7.11.+'
    // https://mvnrepository.com/artifact/com.squareup.okio/okio-jvm
    runtimeOnly group: 'com.squareup.okio', name: 'okio-jvm', version: '3.10.+'

    // https://github.com/ZeyDie/Simple-GSON
    implementation group: 'com.zeydie', name: 'SGson', version: '2.11.x-1.+'

    // https://mvnrepository.com/artifact/org.atteo.classindex/classindex
    implementation group: 'org.atteo.classindex', name: 'classindex', version: '3.13'
    annotationProcessor group: 'org.atteo.classindex', name: 'classindex', version: '3.13'

    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '33.1.+'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.24.+'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.+'

    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation group: 'org.jetbrains', name: 'annotations', version: '26.0.+'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.+'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.+'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.+'
    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.+'

    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.37'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    testImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.+'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.+'
    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.+'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.+'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.+'
}

jar {
    def librariesFolder = "libraries"

    configurations.runtimeClasspath.collect {
        def path = it.getAbsolutePath();

        copy  {
            from path
            into "$buildDir/libs/$librariesFolder"
        }
    }

    manifest {
        attributes(
                "Class-Path": configurations.runtimeClasspath.collect { "$librariesFolder/" + it.getName() }.join(' ')
        )
    }
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}